Fix alignment of highscore list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,8 @@ p {
 .close {
     color: yellow;
 }
+
+.centered {
+    text-align: center;
+    list-style-position: inside;
+}
